<resources>
    <string name="app_name">LolyHubApp</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="shope">Shope</string>
    <string name="wallet">Wallet</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <!--navigation drawer placeholders-->
    <string name="home">Home</string>
    <string name="addPrgrams">Add Programs</string>
    <string name="orderHistory">Order History</string>
    <string name="Account_Setting">Account Settings</string>

    <!--placeholders for recyclerview-->
    <string name="name">name</string>
    <string name="alpha2">alpha2 code</string>
    <string name="alpha3">alpha3 code</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>

    <!--placeholder for loginsignup  screen-->
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    
    
    <!--placeholder for login logout screens-->

    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="or">Or</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="usernameMobile">Enter your user name or Mobile</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="pressHere">Press Here</string>
    <string name="forgotpassword">Forgot your password?</string>

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="enterEmail">Email</string>
    <string name="reenterEmail">Confirm Email</string>
    <string name="newUsername">Username</string>
    <string name="reenterPassword">Confirm Password</string>
    <string name="number">+966</string>
    <string name="BirthDate">Birth date</string>

    <string name="Gender">Gender</string>
    <string name="selectCity">Select Your City</string>
    <string name="selectCountry">Select Country</string>
    <string name="lolyterms">I Accept All Lolyhub Terms and Conditions</string>
    <string name="subscribe">Subscribe for Lolyhub Newsletter</string>
    <string name="promtMsg">Gender</string>
    <string name="agreeMsg">By sign up,you agree to </string>
    <string name="termsMsg"><u>Terms of Service</u></string>
    <string name="and">and</string>
    <string name="privacyMsg"><u>Privacy Policy</u></string>
    <!--validatio massages-->
    <string name="emailConfirmMsg"> Email and Confirm Email should be same</string>
    <string name="valid_mail">Please Enter Valid Email Id</string>
    <string name="validateMbileNumber">Please Enter Valid Mobile Number</string>
    <string name="validatePassword">Please Enter Valid Password</string>
    <string name="notEmpty">Fields can not be empty</string>
    <string name="validate_firstname">Enter Firstname</string>
    <string name="validate_lastname">Enter Lastname</string>
    <string name="validate_mail">Enter Mail</string>
    <string name="validate_confirmmail">Confirm Mail</string>
    <string name="validate_username">Enter Username</string>
    <string name="validate_password">Enter Password</string>
    <string name="validate_confirmpassword">Enter Confirm Password</string>
    <string name="validate_birthdate">Enter Birthdate</string>
    <string name="validate_gender">Select Gender</string>
    <string name="validate_mobileNumber">Enter Mobile Number</string>
    <string name="validate_missmatchpassword">password should be same</string>
    <!--launching activity-->
    <string name="marketPlace">A New Digital Marketplace</string>
    <string name="foods">Foods</string>
    <!--placeholders for home activitiy-->
    <string name="electronics">Electronics</string>
    <string name="food">food</string>
    <string name="book">book</string>
    <string name="watches">watches</string>
    <string name="winter_msg">Winter is Comming</string>
    <string name="shope_by_categories">SHOPE BY CATEGORIES</string>
    <string name="product_title"> lolyhub piza  </string>
    <string name="product_viewMore">View More</string>
    <string name="product_imagetitle">product image title</string>
    <string name="product_redeemOne"> redeem one </string>
    <string name="product_redeemtwo"> redeem two</string>
    <string name="product_redeemthree"> redeem three</string>
    <string name="product_EarningOne"> Earning One </string>
    <string name="product_EarningTwo"> Earning Two</string>
    <string name="product_EarningThree"> Earning Three</string>
    <string name="points">133LP</string>
    
    <!--wishlist-->
    <string name="title_dominos">dominoz pizza</string>
    <string name="price">Price</string>
    <string name="move_items">Move ll items to cart</string>
    <string name="earn">Earn</string>
    <string name="move_to_cart">Move to Cart</string>
    <string name="points_plus">+133LP</string>

    <!--cart view-->
    <string name="checkout">Checkout</string>
    <string name="total_lp">Total LP</string>
    <string name="total_Earn">Total Earn</string>
    <string name="cart_points">166LP</string>
    <string name="cart_poits_plus">+16LP</string>
    <string name="loading">wait while loading...</string>

    <!--facebook app id-->
<string name="facebook_app_id">290500948031280</string>
    <!--wallet plaacholders-->
    <string name="program">Program</string>
    <string name="txtpoints">points</string>
    <string name="LP">LP</string>
    <string name="exchange">Exchage</string>
    <string name="wallet_exchangetxt">Exchange</string>
    <string name="wallet_points">10000 Point</string>
    <string name="wallet_LP_points">1666 LP</string>
    <string name="wallet_setvalue">Set Value</string>
    <string name="wallet_zero">0</string>
    <string name="wallet_lp">LP</string>
    <string name="wallet_msg">Your remaining points balance will be</string>
    <string name="wallet_zero_points">0 points</string>
    <!--wallet alert placeholders-->
    <string name="alert_wallet_title">Lolyhub AlertDialog</string>
    <string name="alert_wallet_message">Are you sur? want to delete this item?</string>
    <string name="alert_wallet_ok">Ok</string>
    <string name="alert_wallet_cancel">Cancel</string>
    <string name="wallet_addprgram_txt">Add Program</string>
    <string name="wallet_totallp_txt">Total LP</string>

    <!--wallet alert placeholders-->
    <string name="productdetails_listitemhorizontal_titletxt">Your fitness choice, 3 months VIP subscription in body masters all VIP branches for men only this offer will be valid till 30/12/2017 </string>
    <string name="productdetails_listitemhorizontal_redeemfor">Redeem for</string>
    <string name="productdetails_listitemhorizontal_earning">Earning</string>
    <string name="productdetails_listitemhorizontal_redeemLP">2833 LP</string>
    <string name="productdetails_listitemhorizontal_earningLP">2833 + LP</string>
    <string name="productdetails_listitemhorizontal_cart">CART</string>
    <string name="productdetails_listitemhorizontal_wislist">WISHLIST</string>
    <string name="product_toolbar_title">Watches</string>

    <!--product detail placeholders-->
    <string name="productdetail_producttitle">Hublot Ferrari Luxury Watch</string>
    <string name="productdetail_productvalue">Product value</string>
    <string name="productdetail_productsarvalue">20,0000 SAR</string>
    <string name="productdetail_productstock">24 Vouhers in stock</string>
    <string name="productdetail_productdescription">Descriptions:</string>
    <string name="productdetail_productterms">Terms &amp; Conditions</string>
    <string name="productdetail_productlocation">Location:</string>
    <string name="productdetail_detail_txt">Hublot has created limited edition ferrari watch that costs more than most of the actual cars.Hublot has created limited edition ferrari watch that costs more than most of the actual cars.Hublot has created limited edition ferrari watch that costs more than most of the actual cars.Hublot has created limited edition ferrari watch that costs more than most of the actual cars.Hublot has created limited edition ferrari watch that costs more than most of the actual cars.</string>
    <string name="productdetail_redeem">REDEEM</string>
    
    <!--order history screen placeholders-->
    <string name="order_number">number:</string>
    <string name="redeem_for">redeem for:</string>
    <string name="redeem_for_value">157 LP</string>
    <string name="redeem_date">redeem date:</string>
    <string name="redeem_date_value">15/2/2017</string>
    <string name="redeeem_time">redeem time:</string>
    <string name="redeeem_time_value">14:2 PM</string>
    <string name="order_earning">earning:</string>
    <string name="order_earning_value">+8 LP</string>
    <!--about us screen placeholders-->
<string name="wats_our_story">Whats out story ?</string>
    <string name="story_txt">Lolyhub is building new trend in the Ecommerce world. Lolyhub is building new trend in the Ecommerce world. Lolyhub is building new trend in the Ecommerce world. Lolyhub is building new trend in the Ecommerce world. </string>
    <string name="missing_oround">So what have we been missing around?</string>
    <string name="missing_txt">We have brought together retailer and loyalty program provider into one platform where freeks like us can redeem and benefit from others availbale on our site.
    We have brought together retailer and loyalty program provider into one platform where freeks like us can redeem and benefit from others availbale on our site.
    We have brought together retailer and loyalty program provider into one platform where freeks like us can redeem and benefit from others availbale on our site.We have brought together retailer and loyalty program provider into one platform where freeks like us can redeem and benefit from others availbale on our site</string>
    <!--contact  us screen placeholders-->
    <string name="contactus_txt">Contact us</string>
    <string name="contactus_help">How can we help?</string>
    <string name="contactus_urname">Your name</string>
    <string name="contactus_urEmail">Your Email</string>
    <string name="contactus_urSubject">Your Subject</string>
    <string name="contactus_urMessage">Your Message</string>
    <string name="contactus_submit">Submit</string>
    <string name="conatctus_byEmail">Contact us by email</string>
    <string name="contactus_emailid">info@lolyhub.com</string>





</resources>