<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/addPrgrams" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/orderHistory" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/Account_Setting" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_launcher"                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_launcher"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
