<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeMarketPlace"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/marginTwenty"
             >
            <EditText
                android:id="@+id/edit_firstName"
                style="@style/CustomSignUpEdittext"
                android:layout_width="match_parent"
                android:hint="@string/firstname"/>
            <EditText
                android:id="@+id/edit_lastName"
                android:layout_marginTop="@dimen/signup_spacing_size"
                style="@style/CustomSignUpEdittext"
            android:layout_width="match_parent"
            android:hint="@string/lastname"/>
            <EditText
                android:id="@+id/edit_email"
                android:layout_marginTop="@dimen/marginTen"
                style="@style/CustomSignUpEdittext"
                android:layout_width="match_parent"
                android:hint="@string/enterEmail"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_marginTop="@dimen/marginTen"
                style="@style/CustomSignUpEdittext"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:hint="@string/password"/>
            <EditText
                android:id="@+id/edit_ReEnterPassword"
                android:layout_marginTop="@dimen/marginTen"
                style="@style/CustomSignUpEdittext"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:hint="@string/reenterPassword"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTwenty"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:text="@string/agreeMsg"/>
            <TextView
                android:id="@+id/txt_termsCondtions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginFive"
                android:textColor="@color/blueColor"
                android:textSize="@dimen/textSize"
                android:text="@string/termsMsg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueColor"
                android:textSize="@dimen/textSize"
                android:text="@string/and"/>
            <TextView
                android:id="@+id/txt_privacyPolicy"
                android:layout_marginLeft="@dimen/marginFive"
                android:textColor="@color/blueColor"
                android:textSize="@dimen/textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyMsg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/marginTen"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTen"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/toggle"
                android:layout_width="@dimen/marginThirty"
                android:layout_height="@dimen/height_togglebutton"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:text="@string/subscribe"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_Register_signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginLogoutButtonSize"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/marginTwenty"
            android:text="@string/signUp"
            android:textSize="@dimen/textSize"
            android:background="@drawable/rounded_button"/>

        <TextView
            android:layout_marginTop="@dimen/marginTwenty"
            android:layout_width="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_height="wrap_content"
            android:text="Or"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTwenty"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/fbLogin_ID"
                style="@style/SocialLoginButton"
                android:layout_width="match_parent"
                android:src="@drawable/facbook"/>
            <ImageView
                android:id="@+id/gplusLogin_ID"
                android:layout_marginTop="@dimen/signup_spacing_size"
                style="@style/SocialLoginButton"
                 android:layout_width="match_parent"
                android:src="@drawable/gplus"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>