<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/registration_layout_margin"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_userMobile"
        style="@style/CustomSignUpEdittext"
        android:hint="@string/usernameMobile"/>
    <EditText
        android:id="@+id/edit_userPassword"
        android:layout_marginTop="@dimen/marginTen"
        style="@style/CustomSignUpEdittext"
        android:hint="@string/password"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/marginTen"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/chkBoxContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/chk_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/txt_rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:text="@string/remember"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_forgotPassword"
            android:paddingTop="@dimen/paddingTen"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/marginTwenty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:textSize="@dimen/textSize"
        android:text="@string/login"/>
    <TextView
        android:layout_marginTop="@dimen/marginTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/facebookImgSize"
            android:layout_marginRight="@dimen/facebookImgSize"
            android:layout_height="@dimen/facebookImgSize"
            android:src="@drawable/facebook"/>
        <ImageView
            android:layout_width="@dimen/facebookImgSize"
            android:layout_height="@dimen/facebookImgSize"
            android:src="@drawable/googleplus"/>
    </LinearLayout>

</LinearLayout>